--- a/examples/markets/assets/assets_tutorial.ipynb
+++ b/examples/markets/assets/assets_tutorial.ipynb
@@ -24,8 +24,8 @@
    "id": "713cedfebca6c6f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-17T12:40:23.902499Z",
-     "start_time": "2025-05-17T12:40:23.896811Z"
+     "end_time": "2025-05-17T12:45:04.468165Z",
+     "start_time": "2025-05-17T12:45:04.465333Z"
     }
    },
    "source": [
@@ -56,15 +56,15 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "405b0a22",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-17T12:40:25.640009Z",
-     "start_time": "2025-05-17T12:40:23.903638Z"
+     "end_time": "2025-05-17T12:45:06.218729Z",
+     "start_time": "2025-05-17T12:45:04.469163Z"
     }
    },
    "source": [
@@ -93,16 +93,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001B[2m2025-05-17T12:40:24.473173Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
-      "\u001B[2m2025-05-17T12:40:24.680131Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
-      "\u001B[2m2025-05-17T12:40:25.118070Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.3990 seconds. Requesting GET from http://192.168.178.69:8000/orm/api/pods/projects/get_user_default_project/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
-      "\u001B[2m2025-05-17T12:40:25.119515Z\u001B[0m [\u001B[32m\u001B[1minfo     \u001B[0m] \u001B[1mSet remote data source to orm_class='DataSource' id=1 display_name='Default TS GCP' organization=1 class_type='timescale_db' status='AVAILABLE' extra_arguments=None\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at models_tdag.py:2114 in set_remote_db())\n",
-      "\u001B[2m2025-05-17T12:40:25.186031Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
-      "\u001B[2m2025-05-17T12:40:25.632596Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4455 seconds. Requesting GET from http://192.168.178.69:8000/orm/api/assets/api/constants\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+      "\u001B[2m2025-05-17T12:45:05.035671Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-05-17T12:45:05.288639Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-05-17T12:45:05.697859Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4002 seconds. Requesting GET from http://192.168.178.69:8000/orm/api/pods/projects/get_user_default_project/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-05-17T12:45:05.699030Z\u001B[0m [\u001B[32m\u001B[1minfo     \u001B[0m] \u001B[1mSet remote data source to orm_class='DataSource' id=1 display_name='Default TS GCP' organization=1 class_type='timescale_db' status='AVAILABLE' extra_arguments=None\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at models_tdag.py:2114 in set_remote_db())\n",
+      "\u001B[2m2025-05-17T12:45:05.765471Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-05-17T12:45:06.211548Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4451 seconds. Requesting GET from http://192.168.178.69:8000/orm/api/assets/api/constants\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -121,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-17T12:40:26.144120Z",
-     "start_time": "2025-05-17T12:40:25.641693Z"
+     "end_time": "2025-05-17T12:45:06.328529Z",
+     "start_time": "2025-05-17T12:45:06.221206Z"
     }
    },
    "cell_type": "code",
@@ -140,34 +140,22 @@
    "id": "be858d05afc24ac0",
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001B[2m2025-05-17T12:40:25.956969Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.3124 seconds. Requesting POST from http://192.168.178.69:8000/orm/api/assets/asset/register_figi_as_asset_in_ms_share_class_venue/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "Error appending creating: {\"detail\":\"Method \\\"POST\\\" not allowed.\"}",
+     "ename": "TypeError",
+     "evalue": "make_request() got an unexpected keyword argument 'timeout'",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mException\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[3], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m figi_to_register\u001B[38;5;241m=\u001B[39m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mBBG014T46NC0\u001B[39m\u001B[38;5;124m\"\u001B[39m,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mBBG00GQ6S7X0\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m f \u001B[38;5;129;01min\u001B[39;00m figi_to_register:\n\u001B[0;32m----> 4\u001B[0m     \u001B[43mAsset\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mregister_figi_as_asset_in_ms_share_class_venue\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfigi\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mf\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      5\u001B[0m \u001B[43m                                          \u001B[49m\u001B[43mtimeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m100000\u001B[39;49m\n\u001B[1;32m      6\u001B[0m \u001B[43m                                          \u001B[49m\n\u001B[1;32m      7\u001B[0m \u001B[43m                                          \u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      8\u001B[0m     registered_asset\u001B[38;5;241m=\u001B[39mAsset\u001B[38;5;241m.\u001B[39mget(figi\u001B[38;5;241m=\u001B[39mf,execution_venue__symbol\u001B[38;5;241m=\u001B[39mMARKETS_CONSTANTS\u001B[38;5;241m.\u001B[39mMAIN_SEQUENCE_EV)\n\u001B[1;32m      9\u001B[0m     registered_asset\u001B[38;5;241m.\u001B[39mpretty_print()\n",
-      "File \u001B[0;32m~/code/mainsequence-sdk/mainsequence/client/models_vam.py:540\u001B[0m, in \u001B[0;36mAsset.register_figi_as_asset_in_ms_share_class_venue\u001B[0;34m(cls, figi, timeout)\u001B[0m\n\u001B[1;32m    532\u001B[0m r \u001B[38;5;241m=\u001B[39m make_request(\n\u001B[1;32m    533\u001B[0m     s\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39mbuild_session(),\n\u001B[1;32m    534\u001B[0m     loaders\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39mLOADERS,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    537\u001B[0m     payload\u001B[38;5;241m=\u001B[39mpayload\n\u001B[1;32m    538\u001B[0m )\n\u001B[1;32m    539\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m r\u001B[38;5;241m.\u001B[39mstatus_code \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m [\u001B[38;5;241m200\u001B[39m, \u001B[38;5;241m201\u001B[39m]:\n\u001B[0;32m--> 540\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mError appending creating: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mr\u001B[38;5;241m.\u001B[39mtext\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m    541\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m r\u001B[38;5;241m.\u001B[39mjson()\n",
-      "\u001B[0;31mException\u001B[0m: Error appending creating: {\"detail\":\"Method \\\"POST\\\" not allowed.\"}"
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 4\u001B[0m\n\u001B[1;32m      2\u001B[0m figi_to_register\u001B[38;5;241m=\u001B[39m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mBBG014T46NC0\u001B[39m\u001B[38;5;124m\"\u001B[39m,\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mBBG00GQ6S7X0\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m f \u001B[38;5;129;01min\u001B[39;00m figi_to_register:\n\u001B[0;32m----> 4\u001B[0m     \u001B[43mAsset\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mregister_figi_as_asset_in_ms_share_class_venue\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfigi\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mf\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      5\u001B[0m \u001B[43m                                          \u001B[49m\u001B[43mtimeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m100000\u001B[39;49m\n\u001B[1;32m      6\u001B[0m \u001B[43m                                          \u001B[49m\n\u001B[1;32m      7\u001B[0m \u001B[43m                                          \u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      8\u001B[0m     registered_asset\u001B[38;5;241m=\u001B[39mAsset\u001B[38;5;241m.\u001B[39mget(figi\u001B[38;5;241m=\u001B[39mf,execution_venue__symbol\u001B[38;5;241m=\u001B[39mMARKETS_CONSTANTS\u001B[38;5;241m.\u001B[39mMAIN_SEQUENCE_EV)\n\u001B[1;32m      9\u001B[0m     registered_asset\u001B[38;5;241m.\u001B[39mpretty_print()\n",
+      "File \u001B[0;32m~/code/mainsequence-sdk/mainsequence/client/models_vam.py:532\u001B[0m, in \u001B[0;36mAsset.register_figi_as_asset_in_ms_share_class_venue\u001B[0;34m(cls, figi, timeout)\u001B[0m\n\u001B[1;32m    530\u001B[0m url \u001B[38;5;241m=\u001B[39m \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39mget_object_url()\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m/register_figi_as_asset_in_ms_share_class_venue/\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    531\u001B[0m payload \u001B[38;5;241m=\u001B[39m {\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mjson\u001B[39m\u001B[38;5;124m\"\u001B[39m: {\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfigi\u001B[39m\u001B[38;5;124m\"\u001B[39m: figi}}\n\u001B[0;32m--> 532\u001B[0m r \u001B[38;5;241m=\u001B[39m \u001B[43mmake_request\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    533\u001B[0m \u001B[43m    \u001B[49m\u001B[43ms\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43mcls\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbuild_session\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    534\u001B[0m \u001B[43m    \u001B[49m\u001B[43mloaders\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43mcls\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mLOADERS\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    535\u001B[0m \u001B[43m    \u001B[49m\u001B[43mr_type\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mPOST\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m    536\u001B[0m \u001B[43m    \u001B[49m\u001B[43murl\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43murl\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    537\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpayload\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpayload\u001B[49m\u001B[43m,\u001B[49m\u001B[43mtimeout\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtimeout\u001B[49m\n\u001B[1;32m    538\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    539\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m r\u001B[38;5;241m.\u001B[39mstatus_code \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m [\u001B[38;5;241m200\u001B[39m, \u001B[38;5;241m201\u001B[39m]:\n\u001B[1;32m    540\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mError appending creating: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mr\u001B[38;5;241m.\u001B[39mtext\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mTypeError\u001B[0m: make_request() got an unexpected keyword argument 'timeout'"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-17T12:40:26.145045Z",
-     "start_time": "2025-05-17T12:40:26.144993Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "assets_in_venue=Asset.filter(ticker=\"NVDA\",execution_venue__symbol=MARKETS_CONSTANTS.MAIN_SEQUENCE_EV)\n",
