--- a/examples/markets/portfolios/portfolio_building_tutorial.ipynb
+++ b/examples/markets/portfolios/portfolio_building_tutorial.ipynb
@@ -159,9 +159,8 @@
     "class PortfolioExample(TimeSerie):\n",
     "    \n",
     "    @TimeSerie._post_init_routines()\n",
-    "    def __init__(self, portfolio_volatility: float,source_prices:str, *args, **kwargs):\n",
+    "    def __init__(self, portfolio_volatility: float,*args, **kwargs):\n",
     "        self.portfolio_volatility = portfolio_volatility\n",
-    "        self.source_prices=source_prices\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \n",
     "    def update(self, update_statistics):\n",
@@ -174,6 +173,8 @@
     "        \"\"\"\n",
     "        last_observation = self.get_last_observation()\n",
     "        dt = 1.0  # one day time increment\n",
+    "\n",
+    "        mock_asset=Asset.filter(ticker=\"NVDA\",execution_venue=MARKETS_CONSTANTS.MAIN_SEQUENCE_EV)[0]\n",
     "\n",
     "        if last_observation is not None:\n",
     "            return pd.DataFrame() # do not make sequential updats for example\n",
@@ -192,14 +193,25 @@
     "                new_price = prices[-1] * np.exp(random_return - 0.5 * self.portfolio_volatility**2 * dt)\n",
     "                prices.append(new_price)\n",
     "                \n",
-    "            new_data = pd.DataFrame({\"close\": prices}, index=dates)\n",
+    "            new_data = pd.DataFrame({\"close\": prices,\"rebalance_weights\":{mock_asset.unique_identifier:1.0},\n",
+    "                                     \"rebalance_price\":{mock_asset.unique_identifier:1.0},\n",
+    "                                     \"weights_at_last_rebalance\":{mock_asset.unique_identifier:1.0},\n",
+    "                                      \"price_at_last_rebalance\":{mock_asset.unique_identifier:1.0},\n",
+    "                                        \"volume_at_last_rebalance\":{mock_asset.unique_identifier:1.0},\n",
+    "\n",
+    "\n",
+    "\n",
+    "                                     }, index=dates)\n",
+    "            new_data[\"last_rebalance_date\"]=new_data.index\n",
+    "            new_data[\"close_time\"]=new_data.index\n",
+    "            new_data[\"return\"]=new_data[\"close\"].pct_change()\n",
     "        if last_observation is not None:\n",
     "            new_data=new_data[new_data.index>update_statistics._max_time_in_update_statistics]\n",
     "         \n",
     "        return new_data\n",
     "    \n",
     "    \n",
-    "portfolio_ts=PortfolioExample(portfolio_volatility=.1,source_prices=\"backtest\")\n",
+    "portfolio_ts=PortfolioExample(portfolio_volatility=.1)\n",
     "portfolio_ts.run(debug_mode=True,force_update=True)\n"
    ],
    "outputs": [
