reportbuilder and imports

--- a/examples/markets/time_series_details/markets_time_series.ipynb
+++ b/examples/markets/time_series_details/markets_time_series.ipynb
@@ -62,7 +62,7 @@
     "from mainsequence.client import DataUpdates\n",
     "import datetime\n",
     "from mainsequence.client import TargetPortfolio, Asset,TargetPortfolioIndexAsset\n",
-    "from mainsequence import MARKETS_CONSTANTS \n",
+    "from mainsequence.client import MARKETS_CONSTANTS \n",
     "from mainsequence.client import MarketsTimeSeriesDetails\n"
    ],
    "id": "bc8643b7aecc45e1",
