--- a/examples/markets/portfolios/portfolio_building_tutorial.ipynb
+++ b/examples/markets/portfolios/portfolio_building_tutorial.ipynb
@@ -55,7 +55,7 @@
     "from mainsequence.client import DataUpdates\n",
     "import datetime\n",
     "from mainsequence.client import TargetPortfolio, Asset,TargetPortfolioIndexAsset\n",
-    "from mainsequence import MARKETS_CONSTANTS \n"
+    "from mainsequence.client import MARKETS_CONSTANTS\n"
    ],
    "outputs": [
     {
